--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "npx webpack"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.12.2",
     "webpack-cli": "^4.3.1"
